# unitree-a1-sim

robots/a1_description/config/: a1_controller.yaml
robots/a1_description/urdf/: a1.urdf
song_gazebo/: CMakeLists.txt  InitPosition.cpp  package.xml
song_gazebo/include/: InitPosition.h
song_msgs/: CMakeLists.txt  package.xml
song_msgs/msg/: MotorCmd.msg  MotorState.msg
song_ros_control/: CMakeLists.txt  package.xml  song_controller_plugins.xml  song_wbc_stand_plugins.xml
song_ros_control/include/song_ros_control/: A1Controller.h  A1StandController.h
song_ros_control/include/song_ros_control/wbc/: Utils.h
song_ros_control/include/song_ros_control/wbc/OSC/: OscTrackingData.h  OscTrackingDataRaw.h
song_ros_control/include/song_ros_control/wbc/controller/: OscStandController.h
song_ros_control/src/: A1Controller.cpp  A1StandController.cpp  OscStandController.cpp  OscTrackingData.cpp  OscTrackingDataRaw.cpp  Utils.cpp
song_ros_control/urdf/: a1.urdf
song_wbc/: CMakeLists.txt  package.xml
song_wbc/include/song_wbc/: Utils.h
song_wbc/include/song_wbc/OSC/: OscTrackingData.h
song_wbc/include/song_wbc/controller/: OscStandController.h
song_wbc/src/: OscStandController.cpp  OscTrackingData.cpp  Utils.cpp  WbcStand.cpp
unitree_gazebo/: package.xml
unitree_gazebo/launch/: a1.launch  normal.launch
unitree_gazebo/worlds/: stairs.world
